fixed alignment

--- a/frontend/src/app/modules/home/capture/capture.component.scss
+++ b/frontend/src/app/modules/home/capture/capture.component.scss
@@ -1,6 +1,9 @@
 :host {
-  height: 80vh;
+  height: 50vh;
   width: 100%;
+  align-self: center;
+  justify-content: center;
+  padding-top: 20%;
 }
 
 .video-container {
