--- a/frontend/src/app/modules/home/layout/layout.component.scss
+++ b/frontend/src/app/modules/home/layout/layout.component.scss
@@ -2,22 +2,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  //height: 100vh;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  //max-height: calc(30vh + 20px);
+  justify-content: space-evenly;
+  align-content: center;
   min-height: fit-content;
   width: 85vw;
   border-radius: 8px;
   padding: 10px;
-  height: 100vh;
+  //height: 100vh;
   //background-color: rgb(255 255 255 / 75%);
-  margin: auto;
+  //margin: auto;
 
   > div {
     display: flex;
@@ -39,13 +38,16 @@
       overflow-wrap: break-word;
     }
   }
+}
 
   .btn {
+    //display: flex;
     margin: 10px;
     width:100%; 
     height:15vh;
     justify-items: center;
     align-items: center;
+    align-self: center;
     background-color: #FFD23F;
   }
 
@@ -68,22 +70,22 @@
     text-align: center;
     padding: 20px;
     color: whitesmoke;
-    height: 100%;
+    align-self: center;
   }
 
   .instructionBox{
     display: flex;
-    flex-direction: column;
-    align-content: center;
     background-color:#EE4266;
     height: 30vh;
     border-radius: 15px;
     box-shadow: 0px 10px 30px #f5587aac;
-    margin: auto;
+    width: 75vw;
+    padding: 20px;
+    align-self: center;
   }
 
   .flash{
-    animation: blink 3s linear infinite;
+    animation: blink 4s linear infinite;
   }
 
   @keyframes blink {
@@ -91,11 +93,11 @@
       opacity: 0.7;
     }
     50%{
-      opacity: 0.3;
+      opacity: 0.5;
     }
     75%{
       opacity:0.7;
     }
   }
 
-}
+
