--- a/frontend/src/app/modules/home/welcome/welcome.component.scss
+++ b/frontend/src/app/modules/home/welcome/welcome.component.scss
@@ -6,5 +6,5 @@
     line-height: 5px;
     padding: 10px;
     color: white;
-    padding-bottom: 20px;
+    padding-bottom: 35px;
 }
