--- a/frontend/src/app/shared/scss/styles.scss
+++ b/frontend/src/app/shared/scss/styles.scss
@@ -37,6 +37,6 @@
     font-style: normal;
     font-size: 34px;
     text-align: center;
-    line-height: 5px;
+    line-height: 1;
     padding: 10px;
   }
